# yandex-disk-api-tests

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
api/: client.py  endpoints.py
config/: settings.py
tests/: conftest.py  test_delete_methods.py  test_get_methods.py  test_post_methods.py  test_put_methods.py
utils/: helpers.py
