[project]
name = "yandex-disk-api-tests"
version = "1.0.0"
description = "API тесты для Яндекс.Диска"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=8.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pytest-xdist>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# Отключаем автоматическое обнаружение пакетов
[tool.setuptools]
packages = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-v -s --strict-markers"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# Добавляем пути для импорта
[tool.pytest]
pythonpath = ["."]