[project]
name = "yandex-disk-api-tests"
version = "1.0.0"
description = "API тесты для Яндекс.Диска"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=8.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pytest-xdist>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# Явное указание структуры пакета
[tool.setuptools]
packages = ["api", "config", "utils"]

[tool.setuptools.package-dir]
api = "api"
config = "config"
utils = "utils"

# Конфигурация pytest - используем ТОЛЬКО один из вариантов
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-v -s --strict-markers"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "get: GET endpoint tests",
    "post: POST endpoint tests", 
    "put: PUT endpoint tests",
    "delete: DELETE endpoint tests",
]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
strict = true
